Adding Motion example

--- a/basic/11_OpenCVMotion/camera.cfg
+++ b/basic/11_OpenCVMotion/camera.cfg
@@ -9,15 +9,13 @@
                 <D type="TXT">NUMERIC</D>
             </VAL>
         </PARAM>
-        <PARAM name="outlet" type="OUTLET">
-            <VAL />
-        </PARAM>
+        <PARAM name="outlet" type="OUTLET" />
         <PARAM name="script" type="SCRIPT">
             <VAL>
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="alpha" type="ALPHA">
+        <PARAM name="alpha" type="ALPHA" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
@@ -40,22 +38,22 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="camera" type="TEXT" options="default">
+        <PARAM name="camera" type="TEXT" property="published" options="default">
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
         </PARAM>
-        <PARAM name="color_format" type="NUM" options="rgb,yuv">
+        <PARAM name="color_format" type="NUM" options="default,yuv,rgb">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="width" type="NUM">
+        <PARAM name="width" type="NUM" property="published">
             <VAL>
                 <D type="NUM">320</D>
             </VAL>
         </PARAM>
-        <PARAM name="height" type="NUM">
+        <PARAM name="height" type="NUM" property="published">
             <VAL>
                 <D type="NUM">240</D>
             </VAL>
@@ -86,6 +84,33 @@
             </VAL>
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
@@ -220,6 +245,42 @@
                 <D type="FUNCTION">0.05</D>
             </VAL>
         </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="texture">0</P>
+        </PRE>
+        <PRE>
+            <P name="texture">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">2</P>
+        </PRE>
+        <PRE>
+            <P name="texture">3</P>
+        </PRE>
+        <PRE>
+            <P name="texture">4</P>
+        </PRE>
+        <PRE>
+            <P name="texture">5</P>
+        </PRE>
+        <PRE>
+            <P name="texture">6</P>
+        </PRE>
+        <PRE>
+            <P name="texture">7</P>
+        </PRE>
+        <PRE>
+            <P name="texture">8</P>
+        </PRE>
+        <PRE>
+            <P name="texture">9</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
