--- a/basic/11_OpenCVMotion/icon.cfg
+++ b/basic/11_OpenCVMotion/icon.cfg
@@ -15,12 +15,12 @@
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="alpha" type="ALPHA">
+        <PARAM name="alpha" type="ALPHA" property="published">
             <VAL>
-                <D type="FUNCTION">0.3</D>
+                <D type="FUNCTION">1</D>
             </VAL>
         </PARAM>
-        <PARAM name="color" type="COLOR">
+        <PARAM name="color" type="COLOR" property="published">
             <VAL>
                 <D type="FUNCTION" code="RED">1.0</D>
                 <D type="FUNCTION" code="GREEN">1.0</D>
@@ -38,27 +38,54 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="texture" type="TEXTURE">
+        <PARAM name="texture" type="TEXTURE" property="published">
+            <VAL>
+                <D type="TXT">CVRESULT</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">CVBLOBS</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">CVBLOBS</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">CVBLOBS</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">CVBLOBS</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">CVBLOBS</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">CVBLOBS</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">CVBLOBS</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">CVBLOBS</D>
+            </VAL>
             <VAL>
                 <D type="TXT">CVBLOBS</D>
             </VAL>
         </PARAM>
-        <PARAM name="blending" type="BLENDING">
+        <PARAM name="blending" type="BLENDING" property="published">
             <VAL>
-                <D type="NUM">0</D>
+                <D type="NUM">1</D>
             </VAL>
         </PARAM>
-        <PARAM name="width" type="FUNCTION">
+        <PARAM name="width" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.3</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">height</D>
             </VAL>
         </PARAM>
-        <PARAM name="height" type="FUNCTION">
+        <PARAM name="height" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.3</D>
+                <D type="FUNCTION">1.0*240/320</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">screen_height/screen_width</D>
@@ -89,6 +116,62 @@
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="texture">0</P>
+            <P name="width">0</P>
+            <P name="height">0</P>
+        </PRE>
+        <PRE>
+            <P name="texture">1</P>
+            <P name="width">1</P>
+            <P name="height">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">2</P>
+            <P name="width">1</P>
+            <P name="height">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">3</P>
+            <P name="width">1</P>
+            <P name="height">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">4</P>
+            <P name="width">1</P>
+            <P name="height">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">5</P>
+            <P name="width">1</P>
+            <P name="height">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">6</P>
+            <P name="width">1</P>
+            <P name="height">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">7</P>
+            <P name="width">1</P>
+            <P name="height">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">8</P>
+            <P name="width">1</P>
+            <P name="height">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">9</P>
+            <P name="width">1</P>
+            <P name="height">1</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
