--- a/basic/11_OpenCVMotion/opencv.cfg
+++ b/basic/11_OpenCVMotion/opencv.cfg
@@ -6,46 +6,22 @@
         <PARAM name="inlet" type="INLET" />
         <PARAM name="outlet" type="OUTLET">
             <VAL>
-                <D type="TXT">TRACKEROPENCV</D>
+                <D type="TXT">TRACKER</D>
                 <D type="TXT">DATA</D>
+                <D type="TXT">particles</D>
+                <D type="TXT">TRACKERKLT</D>
             </VAL>
             <VAL>
                 <D type="TXT">DATAMESSAGE</D>
                 <D type="TXT">MESSAGE</D>
-		<D type="TXT">oscout</D>
+                <D type="TXT">oscout</D>
                 <D type="TXT">DATAMESSAGE</D>
             </VAL>
             <VAL>
-                <D type="TXT">FACE_POSITION_X</D>
-                <D type="TXT">NUMERIC</D>		
-                <D type="TXT">MASCARA</D>
-                <D type="TXT">translatex</D>
-                <D type="TXT">PARTICULAS</D>
-                <D type="TXT">FACE_POSITION_X</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">FACE_POSITION_Y</D>
+                <D type="TXT">MOTION_DETECION</D>
                 <D type="TXT">NUMERIC</D>
-                <D type="TXT">MASCARA</D>
-                <D type="TXT">translatey</D>
-                <D type="TXT">PARTICULAS</D>
-                <D type="TXT">FACE_POSITION_Y</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">FACE_SIZE_WIDTH</D>
-                <D type="TXT">NUMERIC</D>
-                <D type="TXT">MASCARA</D>
-                <D type="TXT">scalex</D>
-                <D type="TXT">PARTICULAS</D>
-                <D type="TXT">FACE_SIZE_WIDTH</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">FACE_SIZE_HEIGHT</D>
-                <D type="TXT">NUMERIC</D>
-                <D type="TXT">MASCARA</D>
-                <D type="TXT">scaley</D>
-                <D type="TXT">PARTICULAS</D>
-                <D type="TXT">FACE_SIZE_HEIGHT</D>
+                <D type="TXT">particles</D>
+                <D type="TXT"></D>
             </VAL>
         </PARAM>
         <PARAM name="script" type="SCRIPT">
@@ -53,7 +29,7 @@
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="texture" type="TEXTURE">
+        <PARAM name="texture" type="TEXTURE" property="published">
             <VAL>
                 <D type="TXT">LIVEIN0</D>
             </VAL>
@@ -61,41 +37,32 @@
                 <D type="TXT">default</D>
             </VAL>
         </PARAM>
-        <PARAM name="recognition_mode" type="NUM" options="Face,Gpu Motion,Contour,Color,Motion Detection,Blobs,Threshold,Body,Face Recognition Memorize,Face Recognition Remember">
+        <PARAM name="recognition_mode" type="NUM" property="published" options="Face,Gpu Motion,Contour,Color,Motion Detection,Blobs,Threshold,Body,Face Recognition Memorize,Face Recognition Remember">
             <VAL>
                 <D type="NUM">4</D>
             </VAL>
+        </PARAM>
+        <PARAM name="threshold" type="FUNCTION" property="published">
             <VAL>
-                <D type="NUM">1</D>
+                <D type="FUNCTION">22</D>
             </VAL>
         </PARAM>
-        <PARAM name="threshold" type="FUNCTION">
-            <VAL>
-                <D type="FUNCTION">50</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="threshold_max" type="FUNCTION">
+        <PARAM name="threshold_max" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">255</D>
             </VAL>
         </PARAM>
-        <PARAM name="reduce_width" type="NUM">
+        <PARAM name="reduce_width" type="NUM" property="published">
             <VAL>
-                <D type="INT">512</D>
-            </VAL>
-            <VAL>
-                <D type="INT">64</D>
+                <D type="INT">256</D>
             </VAL>
         </PARAM>
-        <PARAM name="reduce_height" type="NUM">
+        <PARAM name="reduce_height" type="NUM" property="published">
             <VAL>
-                <D type="INT">512</D>
-            </VAL>
-            <VAL>
-                <D type="INT">64</D>
+                <D type="INT">256</D>
             </VAL>
         </PARAM>
-        <PARAM name="threshold_type" type="NUM" options="Binary,Binary Inverted,Threshold Truncated,To Zero,To Zero Inverted">
+        <PARAM name="threshold_type" type="NUM" property="published" options="Binary,Binary Inverted,Threshold Truncated,To Zero,To Zero Inverted">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
@@ -128,32 +95,32 @@
                 <D type="FUNCTION">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="crop_min_x" type="FUNCTION">
+        <PARAM name="crop_min_x" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="crop_max_x" type="FUNCTION">
+        <PARAM name="crop_max_x" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="crop_min_y" type="FUNCTION">
+        <PARAM name="crop_min_y" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="crop_max_y" type="FUNCTION">
+        <PARAM name="crop_max_y" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="motion_pixels" type="NUM">
+        <PARAM name="motion_pixels" type="NUM" property="published">
             <VAL>
                 <D type="INT">5</D>
             </VAL>
         </PARAM>
-        <PARAM name="motion_deviation" type="NUM">
+        <PARAM name="motion_deviation" type="NUM" property="published">
             <VAL>
                 <D type="INT">20</D>
             </VAL>
@@ -173,11 +140,83 @@
                 <D type="FUNCTION">10</D>
             </VAL>
         </PARAM>
-        <PARAM name="debug_on" type="NUM" options="Off,On,Full">
+        <PARAM name="debug_on" type="NUM" property="published" options="Off,On,Full">
+            <VAL>
+                <D type="NUM">1</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="color" type="COLOR">
+            <VAL>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="training_images_folder" type="TEXT">
+            <VAL>
+                <D type="TXT"></D>
+            </VAL>
+        </PARAM>
+        <PARAM name="saving_images_folder" type="TEXT">
+            <VAL>
+                <D type="TXT"></D>
+            </VAL>
+        </PARAM>
+        <PARAM name="saving_images_mode" type="NUM" options="Time,Still,Smile">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
+        <PARAM name="saving_images_time" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">5000</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="saving_images_size_width" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">30</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="saving_images_size_height" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">30</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="outlet">0</P>
+            <P name="script">0</P>
+            <P name="texture">0</P>
+            <P name="recognition_mode">0</P>
+            <P name="threshold">0</P>
+            <P name="threshold_max">0</P>
+            <P name="reduce_width">0</P>
+            <P name="reduce_height">0</P>
+            <P name="threshold_type">0</P>
+            <P name="line_thickness">0</P>
+            <P name="line_color">0</P>
+            <P name="line_offset_x">0</P>
+            <P name="line_offset_y">0</P>
+            <P name="line_steps">0</P>
+            <P name="crop_min_x">0</P>
+            <P name="crop_max_x">0</P>
+            <P name="crop_min_y">0</P>
+            <P name="crop_max_y">0</P>
+            <P name="motion_pixels">0</P>
+            <P name="motion_deviation">0</P>
+            <P name="blob_min_area">0</P>
+            <P name="blob_max_area">0</P>
+            <P name="blob_min_distance">0</P>
+            <P name="debug_on">0</P>
+            <P name="color">0</P>
+            <P name="training_images_folder">0</P>
+            <P name="saving_images_folder">0</P>
+            <P name="saving_images_mode">0</P>
+            <P name="saving_images_time">0</P>
+            <P name="saving_images_size_width">0</P>
+            <P name="saving_images_size_height">0</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
