--- a/basic/08_Camera/videomanager.cfg
+++ b/basic/08_Camera/videomanager.cfg
@@ -14,7 +14,7 @@
         <PARAM name="preferreddevices" type="TEXT">
             <VAL>
                 <D type="TXT" code="CODENAME">Default</D>
-                <D type="TXT" code="DEVICENAME">default</D>
+                <D type="TXT" code="DEVICENAME">/dev/video1</D>
                 <D type="NUM">0</D>
                 <D type="NUM">640</D>
                 <D type="NUM">480</D>
