--- a/basic/11_OpenCVMotion/oscout.cfg
+++ b/basic/11_OpenCVMotion/oscout.cfg
@@ -4,11 +4,14 @@
     <UPDATE />
     <CONFIGPARAMS>
         <PARAM name="inlet" type="INLET">
-		<VAL><D type="TXT">DATAMESSAGE</D></VAL>
-		<VAL><D type="TXT">MESSAGE</D></VAL>
-	</PARAM>
-        <PARAM name="outlet" type="OUTLET">
-	</PARAM>
+            <VAL>
+                <D type="TXT">DATAMESSAGE</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">MESSAGE</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="outlet" type="OUTLET" />
         <PARAM name="script" type="SCRIPT">
             <VAL>
                 <D type="TXT"></D>
@@ -61,5 +64,19 @@
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="inlet">0</P>
+            <P name="script">0</P>
+            <P name="hosts">0</P>
+            <P name="port">0</P>
+            <P name="devices">0</P>
+            <P name="latency">0</P>
+            <P name="max_events">0</P>
+            <P name="send_events">0</P>
+            <P name="delete_events">0</P>
+            <P name="send_moldeo_api">0</P>
+            <P name="debug">0</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
